<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ajoutTextViewEchantillon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ajoutTextViewEchantillon"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/ajoutEditTextCode"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ajoutEditTextCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/ajoutEditTextLib"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ajoutEditTextLib"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/ajoutEditTextStock"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/ajoutEditTextStock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ajoutButtonAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutButtonAjouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/ajoutButtonQuitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutButtonQuitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/ajoutTextViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutTextViewMessage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />
</androidx.constraintlayout.widget.ConstraintLayout>