<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/majTextViewTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/majTextViewTitre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/majEditTextCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <EditText
        android:id="@+id/majEditTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/majEditTextCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <EditText
        android:id="@+id/majEditTextQte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/majEditTextQte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/majEditTextCode"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/majButtonAjouter"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/majButtonAjouter"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/majButtonSupprimer"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/majButtonSupprimer"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/majButtonAjouter"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/majButtonQuitterListe"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:text="@string/majButtonQuitterListe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/majEditTextQte"
        app:layout_constraintVertical_bias="0.546"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/majTextViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/majTextViewMessage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>